--- a/modules/centralfiles/templates/profile.html
+++ b/modules/centralfiles/templates/profile.html
@@ -32,6 +32,10 @@
         <i>🧠</i>
         <span>PC Folder</span>
       </a>
+      <a href="/files/get/{{ profile.cfid }}/sessions" class="nav-link">
+        <i>📋</i>
+        <span>Sessions</span>
+      </a>
       {% endif %}
       <a href="/files/get/{{ profile.cfid }}/agreements" class="nav-link">
         <i>🤝</i>
