--- a/modules/centralfiles/templates/session.html
+++ b/modules/centralfiles/templates/session.html
@@ -120,7 +120,7 @@
               </div>
               <div class="info-row">
                 <label>Duration:</label>
-                <input type="text" id="session-duration" class="session-input" placeholder="e.g., 2 hours" value="{{ session.duration }}">
+                <input type="text" id="session-duration" class="session-input" placeholder="e.g., 2 hours" value="{{ session.duration }}" title="This is measured in minutes.">
               </div>
               <div class="info-row">
                 <label>Auditor:</label>
