Chem Assist Update
Added tracking for whether a PC si on a Chem Assist (receiving vitamins and stuff)

--- a/modules/centralfiles/templates/profile.html
+++ b/modules/centralfiles/templates/profile.html
@@ -195,6 +195,10 @@
                 <span id="field-tone_level" class="editable" onclick="makeEditable('field-tone_level', '{{ profile.cfid }}')">{{ dianetics.tone_level }}</span>
               </div>
               <div class="field">
+                <label>On Active Chemical Assist?</label>
+                <span id="field-chem_assist" class="editable" onclick="makeEditable('field-chem_assist', '{{ profile.cfid }}', 'bool')">{{ dianetics.chem_assist }}</span>
+              </div>
+              <div class="field">
                 <label>Actual Class of Mind</label>
                 <span>{{ dianetics.mind_class_actual }}</span>
               </div>
