--- a/modules/settings/templates/settings.html
+++ b/modules/settings/templates/settings.html
@@ -12,7 +12,7 @@
 	<main id="config-container">
 		<div class="config-card">
 			<label for="weekday-end">When should the app consider it a new week?</label>
-			<select id="weekday-end" data-config-name="weekday-end">
+			<select id="weekday-end" data-config-name="weekday_end">
 				<option value="monday" selected>Monday</option>
 				<option value="tuesday">Tuesday</option>
 				<option value="wednesday">Wednesday</option>
@@ -32,7 +32,7 @@
 		</div>
 		<div class="config-card">
 			<label for="lookback-length">On the ledger;<br>How far back do we load finances in days?</label>
-			<input type="number" id="lookback-length" data-config-name="looback_length">
+			<input type="number" id="lookback-length" data-config-name="lookback_length">
 		</div>
 		<button class="save-btn" onclick="saveConfig()">Save Settings</button>
 		<a href="/" class="back-btn">Back</a>
