--- a/modules/signals/templates/signals.html
+++ b/modules/signals/templates/signals.html
@@ -14,7 +14,9 @@
     <span id="close-modal" class="close">&times;</span>
     <h2>New Route</h2>
     <label>Route Path:</label>
-    <input id="new-route-path" type="text" placeholder="new-route/wow">
+    <input id="new-route-path" type="text" placeholder="new-route-wow">
+    <label>Route Function File:</label>
+    <input id="new-route-func" type="text" placeholder="None" value="None" title="Specify a python function to run every time this route is called. Leave as 'None' for no function. Always calls 'main' Func inside the file.">
     <label>HTTP Code:</label>
     <input id="new-route-http" type="number" value="200">
     <label>HTML Response:</label>
