--- a/modules/centralfiles/templates/pc_profile.html
+++ b/modules/centralfiles/templates/pc_profile.html
@@ -166,7 +166,7 @@
             </div>
           </div>
         </div>
-        <div id="mindclass_estimation" class="hidden">
+        <div id="mindclass_estimation" class="card">
           <h2>Class of Mind Estimation</h2>
           <div class="estimation-content">
             <p><strong>Estimated Actual Level:</strong> <span id="estimated-actual-level">Loading...</span></p>
